version/0.25/_sources/api/solver/_autosummary/settings/phase_20.rst.txt
:orphan:

.. _phase_20:

phase
=====

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.phase_20.phase
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`rename <rename>`                                              Rename the object.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`phase_child <phase_child_20>`


.. rubric:: Included in:

==========================================================   ==============================================

Parent                                                                                              Summary

==========================================================   ==============================================
:ref:`pressure_far_field_child <pressure_far_field_child>`       'child_object_type' of pressure_far_field.

==========================================================   ==============================================

